--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 
     <!-- styles -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <button class="sidebar-toggle">
@@ -42,6 +42,6 @@
       
     </aside>
     <!-- javascript -->
-   
+    <script src="javascript.js"></script>
   </body>
 </html>
