--- a/index.html
+++ b/index.html
@@ -176,6 +176,6 @@
         </main>
 
         <!--========== MAIN JS ==========-->
-        <!-- <script src="assets/js/main.js"></script> -->
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
